Leonliang/che 47 create sneak previews for dashboard (#31)
* wip

* renamed table to community_members

* wip

* handle case with less than 7 users

* implement leave community using sql

* leverage isMember

* replaced part of delete with sql

* work in progress

* work in progress

* minor fixes

* run generate-client

* refactoring

* wip

* layout

* wip

* bug fixes

* minor changes

* fixed rank

* removed unused

* fix infinite rerendering issue
