# server/docs/swagger.json
@@ -154,6 +154,30 @@
                 }
             }
         },
+        "/v1/communities/preview": {
+            "get": {
+                "security": [
+                    {
+                        "OAuth2Implicit": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Communities"
+                ],
+                "summary": "Get preview of a user's communities",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/http.userCommunitiesPreviewResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/communities/{community_id}": {
             "get": {
                 "security": [
@@ -279,39 +303,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/http.communityResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/communities/{community_id}/members": {
-            "get": {
-                "security": [
-                    {
-                        "OAuth2Implicit": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Communities"
-                ],
-                "summary": "Retrieve all users that are part of a community",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Community ID",
-                        "name": "community_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/http.communitiesResponse"
                         }
                     }
                 }
@@ -544,6 +535,26 @@
         }
     },
     "definitions": {
+        "dtos.Member": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "points": {
+                    "type": "integer"
+                },
+                "position": {
+                    "type": "integer"
+                },
+                "rank": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "http.Team": {
             "type": "object",
             "properties": {
@@ -629,6 +640,23 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        },
+        "http.communityPreviewResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.Member"
+                    }
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -746,6 +774,17 @@
                 }
             }
         },
+        "http.userCommunitiesPreviewResponse": {
+            "type": "object",
+            "properties": {
+                "communityPreviews": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/http.communityPreviewResponse"
+                    }
+                }
+            }
+        },
         "http.userResponse": {
             "type": "object",
             "properties": {
@@ -763,6 +802,9 @@
                         },
                         "lastName": {
                             "type": "string"
+                        },
+                        "points": {
+                            "type": "integer"
                         },
                         "username": {
                             "type": "string"
