# server/handler/http/community.go
@@ -99,6 +99,7 @@ func (h *Handler) GetUserCommunities(ctx echo.Context) error {
 func (h *Handler) JoinCommunity(ctx echo.Context) error {
 	communityId := ctx.Param("community_id")
 	community, err := h.CommunityStore.GetCommunityById(communityId)
+	currentUser := ctx.Get("current_user").(*model.User)
 
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
@@ -108,19 +109,13 @@ func (h *Handler) JoinCommunity(ctx echo.Context) error {
 		return ctx.JSON(http.StatusNotFound, utils.NewError(err))
 	}
 
-	members, err := h.CommunityStore.GetCommunityMembers(community)
-
+	// Check if the user is already a member of the community
+	isMember, err := h.CommunityStore.IsMember(currentUser, community)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
 	}
-
-	currentUser := ctx.Get("current_user").(*model.User)
-
-	// Check if the user is already a member of the community
-	for _, member := range members {
-		if member.ID == currentUser.ID {
-			return ctx.JSON(http.StatusInternalServerError, "user is already a member of the community")
-		}
+	if isMember {
+		return ctx.JSON(http.StatusInternalServerError, "user is already a member of the community")
 	}
 
 	// Check if the user is the owner of the community
@@ -210,109 +205,107 @@ func (h *Handler) DeleteCommunity(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, &response)
 }
 
-// GetCommunityMembers godoc
+// GetUserCommunitiesPreview godoc
 // @Tags Communities
-// @Summary Retrieve all users that are part of a community
+// @Summary Get preview of a user's communities
 // @Produce json
-// @Success 200 {object} http.communitiesResponse
-// @Param community_id path string true "Community ID"
-// @Router /v1/communities/{community_id}/members [GET]
+// @Success 200 {object} http.userCommunitiesPreviewResponse
+// @Router /v1/communities/preview [GET]
 // @Security OAuth2Implicit
-func (h *Handler) GetCommunityMembers(ctx echo.Context) error {
-	communityId := ctx.Param("community_id")
-
-	community, err := h.CommunityStore.GetCommunityById(communityId)
-
-	if err != nil {
-		return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-
-	if community == nil {
-		return ctx.JSON(http.StatusNotFound, utils.NewError(err))
-	}
-
-	users, err := h.CommunityStore.GetCommunityMembers(community)
-
-	if err != nil {
-		return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-
-	response := newUsersResponse(users)
-	return ctx.JSON(http.StatusOK, &response)
-}
-
-// AddPinnedUser godoc
-// @Tags Communities
-// @Summary Add specified user to the pinned users for a given community
-// @Produce json
-// @Success 200 {object} http.communityResponse
-// @Param community_id path string true "Community ID"
-// @Param user_id path string true "User ID"
-// @Router /v1/communities/{community_id}/pinned_users/{user_id} [PUT]
-// @Security OAuth2Implicit
-func (h *Handler) AddPinnedUser(ctx echo.Context) error {
-	communityId := ctx.Param("community_id")
-	userId := ctx.Param("user_id")
+func (h *Handler) GetUserCommunitiesPreview(ctx echo.Context) error {
 	currentUser := ctx.Get("current_user").(*model.User)
 
-	community, err := h.CommunityStore.GetCommunityById(communityId)
+	communities, err := h.CommunityStore.GetUserCommunities(currentUser)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
 	}
 
-	if community == nil {
-		return ctx.JSON(http.StatusNotFound, utils.NotFound())
+	communityPreviews := make([]*communityPreviewResponse, 0)
+
+	for _, community := range communities {
+		// If there are <= 7 users in the community return all members
+		count, err := h.CommunityStore.GetCommunityMembersCount(&community)
+		if err != nil {
+			return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
+		}
+
+		if count <= 7 {
+			members, err := h.CommunityStore.GetCommunityMembers(&community)
+			if err != nil {
+				return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
+			}
+
+			communityPreview := newCommunityPreviewResponse(&community, members)
+			communityPreviews = append(communityPreviews, communityPreview)
+			continue
+		}
+
+		// Get position of current user
+		pos, err := h.CommunityStore.GetUserPosition(currentUser, &community)
+		if err != nil {
+			return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
+		}
+
+		// If current user is in the top 4 positions:
+		// Return top 6 positions + last position
+		if pos <= 4 {
+			topSix, err := h.CommunityStore.GetMembersAtPosition(&community, 1, 6)
+			if err != nil {
+				return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
+			}
+			last, err := h.CommunityStore.GetMembersAtPosition(&community, count, count)
+			if err != nil {
+				return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
+			}
+
+			members := append(topSix, last...)
+			communityPreview := newCommunityPreviewResponse(&community, members)
+			communityPreviews = append(communityPreviews, communityPreview)
+			continue
+		}
+
+		// If current user is in the last 2 positions:
+		// Return last 4 positions + top 3 positions
+		if count-pos < 2 {
+			topThree, err := h.CommunityStore.GetMembersAtPosition(&community, 1, 3)
+			if err != nil {
+				return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
+			}
+			lastFour, err := h.CommunityStore.GetMembersAtPosition(&community, count-3, count)
+			if err != nil {
+				return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
+			}
+
+			members := append(topThree, lastFour...)
+			communityPreview := newCommunityPreviewResponse(&community, members)
+			communityPreviews = append(communityPreviews, communityPreview)
+			continue
+		}
+
+		// Otherwise:
+		// Return top 3 positions, n-1, n (current user position), n+1 and last position
+		topThree, err := h.CommunityStore.GetMembersAtPosition(&community, 1, 3)
+		if err != nil {
+			return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
+		}
+
+		adjacentToUser, err := h.CommunityStore.GetMembersAtPosition(&community, pos-1, pos+1)
+		if err != nil {
+			return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
+		}
+
+		last, err := h.CommunityStore.GetMembersAtPosition(&community, count, count)
+		if err != nil {
+			return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
+		}
+
+		members := append(topThree, adjacentToUser...)
+		members = append(members, last...)
+
+		communityPreview := newCommunityPreviewResponse(&community, members)
+		communityPreviews = append(communityPreviews, communityPreview)
 	}
 
-	user, err := h.UserStore.GetById(userId)
-	if err != nil {
-		return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-	if user == nil {
-		return ctx.JSON(http.StatusNotFound, utils.NotFound())
-	}
-
-	if err := h.CommunityStore.AddPinnedUser(currentUser, user, community); err != nil {
-		return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-
-	response := newCommunityResponse(community)
-	return ctx.JSON(http.StatusOK, &response)
-}
-
-// RemovePinnedUser godoc
-// @Tags Communities
-// @Summary Remove specified user from the pinned users for a given community
-// @Produce json
-// @Success 200 {object} http.communityResponse
-// @Param community_id path string true "Community ID"
-// @Param user_id path string true "User ID"
-// @Router /v1/communities/{community_id}/pinned_users/{user_id} [DELETE]
-// @Security OAuth2Implicit
-func (h *Handler) RemovePinnedUser(ctx echo.Context) error {
-	communityId := ctx.Param("community_id")
-	userId := ctx.Param("user_id")
-	currentUser := ctx.Get("current_user").(*model.User)
-
-	community, err := h.CommunityStore.GetCommunityById(communityId)
-	if err != nil {
-		return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-	if community == nil {
-		return ctx.JSON(http.StatusNotFound, utils.NotFound())
-	}
-
-	user, err := h.UserStore.GetById(userId)
-	if err != nil {
-		return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-	if user == nil {
-		return ctx.JSON(http.StatusNotFound, utils.NotFound())
-	}
-
-	if err := h.CommunityStore.DeletePinnedUser(currentUser, user, community); err != nil {
-		return ctx.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-	response := newCommunityResponse(community)
-	return ctx.JSON(http.StatusOK, &response)
+	response := newUserCommunityPreviewResponse(communityPreviews)
+	return ctx.JSON(http.StatusOK, response)
 }
