# server/handler/http/response.go
@@ -1,6 +1,7 @@
 package http
 
 import (
+	"github.com/leon-liang/check24-tippspiel-challenge/server/dtos"
 	"github.com/leon-liang/check24-tippspiel-challenge/server/model"
 	"sort"
 	"time"
@@ -24,6 +25,7 @@ type userResponse struct {
 		Email     string `json:"email"`
 		FirstName string `json:"firstName"`
 		LastName  string `json:"lastName"`
+		Points    int    `json:"points"`
 	} `json:"user"`
 }
 
@@ -34,7 +36,7 @@ func newUserResponse(u *model.User) *userResponse {
 	r.User.Email = u.Email
 	r.User.FirstName = u.FirstName
 	r.User.LastName = u.LastName
-
+	r.User.Points = u.Points
 	return r
 }
 
@@ -92,6 +94,52 @@ func newCommunitiesResponse(communities []model.Community) *communitiesResponse 
 		cr.Community.Name = c.Name
 
 		r.Communities = append(r.Communities, cr)
+	}
+
+	return r
+}
+
+type communityPreviewResponse struct {
+	ID      string        `json:"id"`
+	Name    string        `json:"name"`
+	Members []dtos.Member `json:"members"`
+}
+
+func newCommunityPreviewResponse(community *model.Community, members []*dtos.Member) *communityPreviewResponse {
+	r := new(communityPreviewResponse)
+	m := dtos.Member{}
+
+	r.ID = community.ID
+	r.Name = community.Name
+
+	r.Members = make([]dtos.Member, 0)
+	for _, member := range members {
+		m.ID = member.ID
+		m.Username = member.Username
+		m.Points = member.Points
+		m.Rank = member.Rank
+		m.Position = member.Position
+		r.Members = append(r.Members, m)
+	}
+
+	return r
+}
+
+type userCommunitiesPreviewResponse struct {
+	CommunityPreviews []communityPreviewResponse `json:"communityPreviews"`
+}
+
+func newUserCommunityPreviewResponse(communityPreviews []*communityPreviewResponse) *userCommunitiesPreviewResponse {
+	r := new(userCommunitiesPreviewResponse)
+	cp := communityPreviewResponse{}
+
+	r.CommunityPreviews = make([]communityPreviewResponse, 0)
+	for _, communityPreview := range communityPreviews {
+		cp.ID = communityPreview.ID
+		cp.Name = communityPreview.Name
+		cp.Members = communityPreview.Members
+
+		r.CommunityPreviews = append(r.CommunityPreviews, cp)
 	}
 
 	return r
