# server/handler/http/routes.go
@@ -16,7 +16,7 @@ func (h *Handler) Register(v1 *echo.Group) {
 	communities.POST("/:community_id/join", h.JoinCommunity)
 	communities.PUT("/:community_id/leave", h.LeaveCommunity)
 	communities.DELETE("/:community_id", h.DeleteCommunity)
-	communities.GET("/:community_id/members", h.GetCommunityMembers)
+	communities.GET("/preview", h.GetUserCommunitiesPreview)
 	communities.PUT("/:community_id/pinned_users/:user_id", h.AddPinnedUser)
 	communities.DELETE("/:community_id/pinned_users/:user_id", h.RemovePinnedUser)
 
