# server/model/user.go
@@ -14,14 +14,7 @@ type User struct {
 	LastName           string
 	CreatedAt          time.Time
 	CreatedCommunities []Community `gorm:"foreignKey:Owner"`
-	JoinedCommunities  []Community `gorm:"many2many:user_community;"`
+	JoinedCommunities  []Community `gorm:"many2many:community_members;"`
 	Bets               []Bet       `gorm:"foreignKey:Bettor"`
 	Points             int         `gorm:"default:0"`
-}
-
-type UserCommunity struct {
-	gorm.Model
-	UserID      string `gorm:"primaryKey"`
-	CommunityID string `gorm:"primaryKey;constraint:OnDelete:CASCADE;"`
-	PinnedUsers []User `gorm:"many2many:user_community_pinned_users;"`
 }
